[package]
name = "dozer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.76.0", features = ["runtime", "derive"] }
serde = "1.0.148"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

